<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- Project coordinates -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.backend</groupId> <!-- Change this to your group ID -->
    <artifactId>io-cpu-local-benchmark</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>io-cpu-local-benchmark</name>
    <description>Java project for benchmarking CPU and I/O performance locally</description>


    <!-- Maven repositories -->
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

    <!-- Dependencies -->
    <dependencies>
        <!-- Other dependencies can be added as needed -->
    </dependencies>

    <!-- Build Configuration -->
    <build>
        <plugins>
            <!-- Maven Compiler Plugin to specify Java version -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>21</source> <!-- Set Java version here -->
                    <target>21</target> <!-- Set Java version here -->
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Optional: Repositories if you use external libraries not in Maven Central -->
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>

</project>